--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
 form {
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.form-container {
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-
 .color-input {
-  width: 50px;
+  width: 25px;
 }
 
 .guess-input {
-  width: 100%;
+  width: 50%;
 }
 
 .guess-index-color-grey {
@@ -27,7 +31,7 @@ p {
   padding: 5px;
   border: 1px solid black;
   display: inline-block;
-  width:10px;
+  width: 10px;
 }
 
 .show-guess-grey {
